@@ -105,6 +105,8 @@ const gremlins = {
     g_V_chooseXhasXname_vadasX__valuesXnameXX: [function({g}) { return g.V().choose(__.has("name", "vadas"), __.values("name")) }], 
     g_V_hasLabelXpersonX_age_chooseXP_eqX29X_constantXmatchedX_constantXotherXX: [function({g}) { return g.V().hasLabel("person").values("age").choose(P.eq(29), __.constant("matched"), __.constant("other")) }], 
     g_V_hasLabelXpersonX_age_chooseXP_eqX29X_constantXmatchedX: [function({g}) { return g.V().hasLabel("person").values("age").choose(P.eq(29), __.constant("matched")) }], 
+    g_V_hasLabelXpersonX_chooseX_valuesXnameX_option1X_isXmarkoX_valuesXageXX_option2Xnone_valuesXnameXX: [function({g}) { return g.V().hasLabel("person").choose(__.values("name")).option(__.is("marko"), __.values("age")).option(Pick.none, __.values("name")) }], 
+    g_V_hasLabelXpersonX_chooseX_valuesXnameX_option1X_PeqXmarkoX_valuesXageXX_option2Xnone_valuesXnameXX: [function({g}) { return g.V().hasLabel("person").choose(__.values("name")).option(P.eq("marko"), __.values("age")).option(Pick.none, __.values("name")) }], 
     g_V_localXpropertiesXlocationX_order_byXvalueX_limitX2XX_value: [function({g}) { return g.V().local(__.properties("location").order().by(T.value, Order.asc).range(0, 2)).value() }], 
     g_V_hasXlabel_personX_asXaX_localXoutXcreatedX_asXbXX_selectXa_bX_byXnameX_byXidX: [function({g}) { return g.V().has(T.label, "person").as("a").local(__.out("created").as("b")).select("a", "b").by("name").by(T.id) }], 
     g_V_localXoutE_countX: [function({g}) { return g.V().local(__.outE().count()) }], 
@@ -170,6 +172,7 @@ const gremlins = {
     g_VX1_2X_localXunionXoutE_count__inE_count__outE_weight_sumXX: [function({g, vid2, vid1}) { return g.V(vid1, vid2).local(__.union(__.outE().count(), __.inE().count(), __.outE().values("weight").sum())) }], 
     g_VX1_2X_localXunionXcountXX: [function({g, vid2, vid1}) { return g.V(vid1, vid2).local(__.union(__.count())) }], 
     g_unionXaddVXpersonX_propertyXname_aliceX_addVXpersonX_propertyXname_bobX_addVXpersonX_propertyXname_chrisX_name: [function({g}) { return g.union(__.addV("person").property("name", "alice"), __.addV("person").property("name", "bob"), __.addV("person").property("name", "chris")).values("name") }], 
+    g_VX_hasLabelXpersonX_unionX_whereX_out_count_isXgtX2XXX_valuesXageX_notX_whereX_bothE_count_isXgt2XXX_valusXnameXX: [function({g}) { return g.V().hasLabel("person").union(__.where(__.outE().count().is(P.gt(2))).values("age"), __.not(__.where(__.outE().count().is(P.gt(2)))).values("name")) }], 
     g_V_aggregateXxX_byXnameX_byXageX_capXxX: [function({g}) { return g.V().aggregate("x").by("name").by("age").cap("x") }], 
     g_V_aggregateXScope_local_xX_byXnameX_byXageX_capXxX: [function({g}) { return g.V().aggregate(Scope.local, "x").by("name").by("age").cap("x") }], 
     g_V_valuesXageX_allXgtX32XX: [function({g}) { return g.V().values("age").all(P.gt(32)) }], 
